# hyperliquid-dc-agent

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
components/vertex-components/: pyproject.toml
components/vertex-components/src/vertex_components/: __init__.py  compare_forecasts.py  compare_forecasts_helpers.py  concat_latent_datasets.py  concat_latent_vectors.py  concat_latent_vectors_nov10.py  concat_threshold_features.py  cross_threshold_train_job.py  custom_forecast_train_job.py  custom_train_job.py  custom_vae_train_job copy.py  custom_vae_train_job.py  data_splitter.py  dc_37.py  dc_configs.py  directional_change_algorithm.py  directional_change_detector.py  feature_engineering.py  feature_engineering_v1.py  feature_engineering_v2.py  get_model_resource_name.py  import_model_evaluation.py  lookup_model.py  model_batch_predict.py  pick_scaler.py  sliding_window_transform.py  tf_data_splitter.py  tf_data_splitter_v1_works_fe_v2.py  tf_data_splitter_v2.py  train.py  unpack_configs.py  update_best_model.py  window_dataset.py  window_dataset_parallel_exp.py  window_generator.py
components/vertex-components/tests/: test_compare_forecasts.py  test_directional_change_class.py  test_directional_change_detector.py  test_lookup_model.py
pipelines/: pyproject.toml
pipelines/src/: ablation.json  pipeline-viz-2.py  pipeline-viz-pub.py  pipeline-viz.py  pipeline-vizv.py
pipelines/tests/tensorflow/training/: test_ablation_pipeline.py  test_vae_training_local.py
trading-agent/: .env.example  AGENTS.md  conftest.py  pyproject.toml
trading-agent/bots/: btc_conservative.yaml  btc_dc_forecast.yaml  btc_dc_overshoot.yaml
trading-agent/docs/: dc-overshoot-parameters.md  observer-agent.md
trading-agent/learning_examples/01_websockets/: realtime_prices.py  realtime_prices_multiple_subs.py
trading-agent/learning_examples/02_market_data/: get_all_prices.py  get_market_metadata.py
trading-agent/learning_examples/03_account_info/: get_open_orders.py  get_user_state.py
trading-agent/learning_examples/04_trading/: cancel_orders.py  place_limit_order.py
trading-agent/learning_examples/05_funding/: README.md  check_spot_perp_availability.py  check_spot_perp_pairs_availability.py  get_funding_rates.py
trading-agent/learning_examples/06_copy_trading/: candidates.py  copy_trading_candidates.md  equity_curve_monitoring.py  get_copy_trading_candidates.py  get_leaderboard_traders.py  mirror_perps_orders.py  mirror_spot_orders.py  mirror_spot_orders_v2.py  mirror_spot_perps_orders.py  mirror_spot_perps_orders_resync.py  mirror_spot_twap_orders.py  price_and_size_util.py  print_parsed_user_events.py  print_raw_websocket_messages.py
trading-agent/learning_examples/06_copy_trading/order_scenarios/: cancel_order.py  cancel_orders.py  cancel_twap_order.py  modify_order.py  modify_orders.py  place_order.py  place_orders_limit.py  place_twap_order.py
trading-agent/src/: __init__.py  run_bot.py
trading-agent/src/agents/: __init__.py
trading-agent/src/agents/observer/: __init__.py  __main__.py  cli.py  collector.py  config.py  reasoner.py  session.py  state.py
trading-agent/src/backtesting/: __init__.py  __main__.py  candle_fetcher.py  cli.py  engine.py  metrics.py  sweep.py
trading-agent/src/core/: endpoint_router.py  engine.py  enhanced_config.py  key_manager.py  risk_manager.py
trading-agent/src/exchanges/: __init__.py
trading-agent/src/exchanges/hyperliquid/: __init__.py  adapter.py  market_data.py
trading-agent/src/interfaces/: __init__.py  exchange.py  strategy.py
trading-agent/src/strategies/: __init__.py
trading-agent/src/strategies/archon/: DESIGN.md  __init__.py  __main__.py  asset_selector.py  backtest.py  bridge.py  claude_proxy.py  compare.py  config.py  context.py  reasoner.py  scanner.py  strategy.py
trading-agent/src/strategies/basis_trade/: DESIGN.md  __init__.py  __main__.py  basis_bridge.py  basis_strategy.py  config.py  funding_monitor.py
trading-agent/src/telemetry/: __init__.py  __main__.py  collector.py  events.py  load_to_bq.py  setup_bq.py
trading-agent/src/trade_review/: __init__.py  cli.py  fill_fetcher.py  fill_pairer.py
trading-agent/src/utils/: events.py  exceptions.py  sub_account_transfer.py
trading-agent/tests/backtesting/: test_candle_fetcher.py  test_engine.py  test_metrics.py  test_multi_scale_engine.py  test_multi_scale_sweep.py  test_sweep.py
trading-agent/tests/core/: test_engine_signals.py
trading-agent/tests/exchanges/: test_adapter_orders.py  test_fill_tracking.py  test_integration_multi_asset.py  test_leverage.py  test_precision.py  test_spot_support.py
trading-agent/tests/telemetry/: test_bridge_integration.py  test_collector.py  test_events.py
trading-agent/tests/trade_review/: test_cli.py  test_fill_fetcher.py  test_fill_pairer.py
(+185 files in other folders)
